# wait-for-db

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md  abuild-fetch.c  build.rs  notes.txt  release.sh
.github/: renovate.json5
.github/workflows/: linux.yml  macOS.yml
src/: common.rs  lib.rs  main.rs  odbc.rs  pg.rs
tests/: cli.rs
