[package]
name = "wait_for_db"
version = "1.1.0"
authors = ["Tom Parker-Shemilt <palfrey@tevp.net>"]
edition = "2018"
resolver = "2"

[dependencies]
odbc-api = "0.19"
odbc-sys = { version= "0.17", features=["static"] }
env_logger = "0.10.0"
clap = { version = "2.33", default-features = false }
exitcode = "1.1"
postgres = {version = "0.19", default-features = false }
regex = {version="1", default-features = false }
rustls = {version="0.20", features=["dangerous_configuration"]}
tokio-postgres-rustls = "0.9"

[dev-dependencies]
assert_cmd = "1.0"
predicates = "1"

# Settings here are because we care more about size than speed
# Based on https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = 'abort'