[package]
name = "wait_for_db"
version = "1.4.0"
authors = ["Tom Parker-Shemilt <palfrey@tevp.net>"]
edition = "2018"
resolver = "2"

[dependencies]
odbc-api = "20.0"
odbc-sys = { version= "0.17", features=["static"] }
env_logger = "0.10.0"
clap = { version = "4", features = ["std", "cargo", "help", "usage"], default-features = false }
exitcode = "1.1"
postgres = {version = "0.19", default-features = false }
regex = {version="1", default-features = false }
rustls = {version="0.23", features=[]}
tokio-postgres-rustls = "0.13"
url = "2"
log = "0.4"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3"

# Settings here are because we care more about size than speed
# Based on https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = 'abort'