[package]
name = "wait_for_db"
version = "1.4.0"
authors = ["Tom Parker-Shemilt <palfrey@tevp.net>"]
edition = "2018"
resolver = "2"

[dependencies]
odbc-api = {version="20.0", default-features = false, features = ["odbc_version_3_80"] }
odbc-sys = { version= "0.17", features=["static"], default-features = false}
env_logger = {version="0.10.0", default-features = false }
clap = { version = "4.5.44", features = ["std", "cargo", "help", "usage"], default-features = false }
exitcode = {version="1.1", default-features = false }
postgres = {version = "0.19", default-features = false }
regex = {version="1", default-features = false }
rustls = {version="0.23", default-features = false, features = ["aws-lc-rs"]}
tokio-postgres-rustls = {version="0.13", default-features = false}
url = {version="2", default-features = false }
log = {version="0.4", default-features = false }

[dev-dependencies]
assert_cmd = {version="2.0", default-features = false }
predicates = {version="3", default-features = false }

# Settings here are because we care more about size than speed
# Based on https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = 'abort'